--- a/EmployeesApp.Web/Views/Employees/Index.cshtml
+++ b/EmployeesApp.Web/Views/Employees/Index.cshtml
@@ -1,14 +1,14 @@
-﻿@model Employee[]
+﻿@model IndexVM[];
 
 @{
     ViewBag.Title = "Employees List";
 }
 
 <ul>
-    @foreach (Employee employee in Model)
+    @foreach (IndexVM employee in Model)
     {
         <li>
-            <a asp-controller="Employees" asp-action="Details" asp-route-id="@employee.Id">@employee.Name</a>
+            <a asp-controller="Employees" asp-action="Details" asp-route-id="@employee.Id"><span style="color:@(employee.ShowAsHighlighted ? "red" : "inherit")">@employee.Name</span></a>
         </li>
     }
 </ul>
